# fixture.doxaed

./: .gitignore  AUDIT_BACKEND.md  AUDIT_BROWSER.md  AUDIT_BROWSER_FINAL.md  AUDIT_FRONTEND.md  AUDIT_MODULES.md  CLAUDE.md
backend/: .env.example  .gitignore  README.md  conftest.py  manage.py  pyproject.toml  requirements.txt  schema-accounts.yml  schema.yml
backend/apps/accounts/: decorators.py  models.py  serializers.py  throttling.py  urls.py  views.py
backend/apps/assistant/: apps.py  context.py  gemini.py  service.py  tools.py  urls.py  views.py
backend/apps/audit/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/badges/: catalog.py  models.py  views.py
backend/apps/disputes/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/fixtures/: apps.py  models.py  views.py
backend/apps/forms/: apps.py  constants.py  models.py  serializers.py  throttling.py  urls.py  views.py
backend/apps/lens/: apps.py  models.py  throttling.py  urls.py  views.py
backend/apps/live/: apps.py  cards.py  consumers.py  meta.py  publish.py  routing.py  sse.py  urls.py  views.py
backend/apps/matches/: apps.py  models.py  public_views.py  serializers.py  urls.py  views.py
backend/apps/notifications/: models.py  serializers.py  urls.py  views.py
backend/apps/organizations/: constants.py  models.py  permissions.py  scope.py  serializers.py  urls.py  views.py
backend/apps/permissions/: __init__.py  apps.py  models.py  permissions.py  scope.py  serializers.py  urls.py  views.py
backend/apps/sadmin/: apps.py  decorators.py  middleware.py  models.py  serializers.py  urls.py
backend/apps/sports/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/teams/: apps.py  models.py  serializers.py  throttling.py  urls.py  views.py  views_houses.py
backend/apps/tournaments/: apps.py  models.py  permissions.py  scope.py  serializers.py  urls.py  views.py
backend/fixture/: asgi.py  urls.py  wsgi.py
backend/fixture/settings/: base.py  dev.py  prod.py
backend/scripts/: CREDENTIALS.md  seed_demo_admin.py  seed_full_demo.py
backend/templates/emails/: base_email.html  contact_relay.html  contact_relay.txt  invitation.html  invitation.txt  notification.html  notification.txt  notification_digest.html  notification_digest.txt  password_reset.html  password_reset.txt  registration_status.html  registration_status.txt  schedule_change.html  schedule_change.txt  team_access_code.html  (+5 more)
(+1086 files in other folders)
