[project]
name = "fixture-backend"
version = "0.1.0"
description = "Fixture Platform — Phase 1A backend (user types, RBAC, Super-admin console)"
requires-python = ">=3.13"
dependencies = [
  # Core
  "django>=5.1,<5.2",
  "djangorestframework>=3.15",
  "django-cors-headers>=4.4",
  "psycopg[binary]>=3.2",
  # Async / live (scaffolded for Phase 1B; not used in 1A)
  "channels>=4.1",
  "channels-redis>=4.2",
  "daphne>=4.1",
  # RBAC + permissions (PyPI package name is `rules`)
  "rules>=3.4",
  # Forms / fields
  "django-htmx>=1.19",
  # Auth & security
  "django-axes>=7.0",
  "argon2-cffi>=23.1",
  "pwned-passwords-django>=2.1",
  "cryptography>=43",
  "pyotp>=2.9",
  "qrcode[pil]>=7.4",
  "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
  "python-magic>=0.4.27 ; sys_platform != 'win32'",
  # Feature flags
  "django-waffle>=4.1",
  # OpenAPI / DRF schema
  "drf-spectacular>=0.27",
  # UUID v7
  "uuid-utils>=0.10",
  # Env config
  "python-dotenv>=1.0",
  "django-environ>=0.11",
  # SaaS console UX
  "django-tailwind>=3.8",
  "django-browser-reload>=1.13",  # tailwind dev autoreload
  "ortools>=9.12",  # R12 CP-SAT schedule optimizer (lazy-imported; optimizer falls back to local search if absent)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-django>=4.8",
  "pytest-cov>=5.0",
  "factory-boy>=3.3",
  "faker>=28",
  "freezegun>=1.5",
  "ruff>=0.6",
  "mypy>=1.11",
  "django-stubs[compatible-mypy]>=5.0",
  "djangorestframework-stubs[compatible-mypy]>=3.15",
  "ipython>=8.27",
]

[tool.ruff]
target-version = "py313"
line-length = 100
[tool.ruff.lint]
select = ["E","F","I","B","UP","S","DJ","RUF"]
ignore = ["S101","DJ001"]
[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501","RUF012"]
"**/tests/**" = ["S101","S105","S106"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "fixture.settings.dev"
python_files = ["test_*.py", "tests.py"]
addopts = "-ra --strict-markers"
markers = [
  "signup_throttle: opt the test out of the test_signup_path_b autouse throttle relaxation (so it can assert real rate-limit behavior)",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
[tool.django-stubs]
django_settings_module = "fixture.settings.dev"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
